feat(nonce): #678 Enhancement of Credential Issuance Endpoint to Support OpenID4VCI 1.0 Features
Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>